--- a/templates/order.html
+++ b/templates/order.html
@@ -159,6 +159,9 @@
     {% if msg=="Porosia është e zbrazët!" %}
     <p style="color: black; opacity: 1.0; text-align: center;">{{msg}}</p>
     {% endif %}
+    {% if msg=="Nuk ka sasi të mjaftueshme në depo!" %}
+    <p style="color: black; opacity: 1.0; text-align: center;">{{msg}}</p>
+    {% endif %}
     {% if msg=="Porosia është dërguar me sukses!" %}
     <p style="color: green; opacity: 1.0; text-align: center;">{{msg}}</p>
     {% endif %}
