--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,7 @@ html {
   top: 0;
   width: auto;
   width: 100%;
+  z-index: 99;
   }
 
 .topnav a {
@@ -63,6 +64,7 @@ html {
   text-decoration: none;
   font-size: 17px;
   top: 0;
+  z-index: 99;
 }
 
 .topnav a:hover {
