--- a/templates/write.html
+++ b/templates/write.html
@@ -23,8 +23,9 @@
 <div style="padding-bottom: 100px;">
     <a href="/home"><img src="static/images/cart.png" alt="Logo" height="50" style="padding: 10px 10px 0px"></a>
     <div style="text-align: center;">
-        <h1 style="padding-top: 140px;">Kyçu</h1>
-        <p style="font-size: 25px; color:black;">Ju lutem kyçuni në mënyrë që të mund të porositni.</p>
+        <h1 style="padding-top: 140px;">Shto ose Ndrysho sasinë e produkteve</h1>
+        <p style="font-size: 20px; color:black;">Shtypni emrin e produktit dhe sasinë e re që për ta ndryshuar në databazë.</p>
+        <p style="font-size: 16px; color:black;"><strong>Sasia e re nuk mblidhet me sasinë e vjetër - por vetëm sasia e re ruhet!</strong></p>
         <form method="post" style="padding-top: 20px; padding-bottom: 20px;">
             <input
                     class="container-fluid" type="text" name="product" placeholder="Emri i produktit"
