--- a/templates/client.html
+++ b/templates/client.html
@@ -23,15 +23,15 @@
         <tbody>
         {% for item in orders %}
         <tr>
-            <td><strong><i>{{item.category}}</i></strong></td>
+            <td><strong style="font-size: 16px;"><i>{{item.category}}</i></strong></td>
 
-            <td><strong><i>{{item.product}}</i></strong></td>
+            <td><strong style="font-size: 16px;"><i>{{item.product}}</i></strong></td>
 
-            <td><strong><i>{{item.quantity}}</i></strong></td>
+            <td><strong style="font-size: 16px;"><i>{{item.quantity}}</i></strong></td>
 
-            <td><strong><i>{{item.qmimi}} €</i></strong></td>
+            <td><strong style="font-size: 16x;"><i>{{item.qmimi}} €</i></strong></td>
 
-            <td><strong><i>{{item.price}} €</i></strong></td>
+            <td><strong style="font-size: 16px;"><i>{{item.price}} €</i></strong></td>
         </tr>
         {% endfor %}
         </tbody>
