--- a/templates/view-users.html
+++ b/templates/view-users.html
@@ -6,7 +6,7 @@
     <table class="table" style="color: white;">
                     <thead style="color: black;">
                     <tr>
-                        <td><strong style="font-size: 30px;">Name</strong></td>
+                        <td><strong style="font-size: 30px;">Username</strong></td>
                         <td><strong style="font-size: 30px;">Email</strong>
                         <td><strong style="font-size: 30px;">Phone</strong></td>
                         <td><strong style="font-size: 30px;">Password</strong></td>
