--- a/templates/view.html
+++ b/templates/view.html
@@ -6,9 +6,12 @@
     <table class="table" style="color: white;">
                     <thead style="color: black;">
                     <tr>
+                        <td><strong style="font-size: 30px;">Nr</strong></td>
+                        <td><strong style="font-size: 30px;">Kategoria</strong></td>
                         <td><strong style="font-size: 30px;">Produkti</strong></td>
-
+                        <td><strong style="font-size: 30px;">Cmimi</strong></td>
                         <td><strong style="font-size: 30px;">Sasia në depo</strong></td>
+
 
                     </tr>
                     </thead>
@@ -17,13 +20,11 @@
                     <tbody style="color: black">
 
                     <tr>
+                        <td><strong><i>{{item._id}}</i></strong></td>
+                        <td><strong><i>{{item.category}}</i></strong></td>
                         <td><strong><i>{{item.product}}</i></strong></td>
-
+                        <td><strong><i>{{item.price}}</i></strong></td>
                         <td><strong><i>{{item.quantity}}</i></strong></td>
-                        <td>
-
-
-                        </td>
                     </tr>
 
                     </tbody>
