--- a/templates/index.html
+++ b/templates/index.html
@@ -127,6 +127,7 @@ transform: rotate(45deg);
 
 
 
+
 </style>
 <body>
 <div class="main" id="section1" style="margin: 0px 0px 0px 0px;">
@@ -137,34 +138,14 @@ transform: rotate(45deg);
                    onkeyup="filtersearchFunction()" class="borderbox1">
             <div id="myDropdown" class="dropdown-content">
                 <a href="home">Market Egzoni</a>
-            <a href="ushqime#bisfino">Bisfino</a>
-            <a href="pije#shkupi">Birra Shkupi</a>
-            <a href="pije#peja">Birra Peja</a>
-            <a href="pije#lasko">Birra Lasko</a>
-            <a href="higjienë#brushë">Brushë e dhëmbëve Colgate</a>
-            <a href="pije#cola">Coca Cola</a>
-            <a href="higjienë#detergjenta">Detergjent për rroba ABC</a>
-            <a href="higjienë#domestos">Domestos</a>
-            <a href="ushqime#doritos">Doritos</a>
-            <a href="pije#fanta">Fanta</a>
-            <a href="pije#frutti">Frutti</a>
-            <a href="pije#daniels">Jack Daniels</a>
-            <a href="ushqime#mars">Mars</a>
-            <a href="ushqime#merci">Merci</a>
-            <a href="ushqime#milky">Milky Way</a>
-            <a href="higjienë#paste">Pastë e dhëmbëve Colgate</a>
-            <a href="ushqime#patos">Patos</a>
-            <a href="pije#pepsi">Pepsi</a>
-            <a href="ushqime#plazma">Plazma</a>
-            <a href="ushqime#samba">Samba</a>
-            <a href="higjienë#schaumavajza">Shampon Schauma për vajza</a>
-            <a href="higjienë#schaumaburra">Shampon Schauma për djem</a>
-            <a href="ushqime#snickers">Snickers</a>
-            <a href="pije#smirnoff">Smirnoff</a>
-            <a href="pije#sprite">Sprite</a>
-            <a href="ushqime#raffaello">Raffaello</a>
-            <a href="ushqime#romantic">Romantic</a>
-            <a href="ushqime#twix">Twix</a>
+                {% for item in values1 %}
+                {% if item.category=="Ushqime" %}
+                <a href="ushqime#{{item.product}}">{{item.product}}</a>
+                {% endif %}
+                {% if item.category=="Pije" %}
+                <a href="pije#{{item.product}}">{{item.product}}</a>
+                {% endif %}
+                {% endfor %}
             </div>
         </div>
     </div>
