--- a/templates/write.html
+++ b/templates/write.html
@@ -27,12 +27,27 @@
         <p style="font-size: 20px; color:black;">Shtypni emrin e produktit dhe sasinë e re që për ta ndryshuar në databazë.</p>
         <p style="font-size: 16px; color:black;"><strong>Sasia e re nuk mblidhet me sasinë e vjetër - por vetëm sasia e re ruhet!</strong></p>
         <form method="post" style="padding-top: 20px; padding-bottom: 20px;">
-            <input
+            <p style="margin-bottom: 0px;">
+
+                <select class="container-fluid" id="category" name="category" onchange="random()"
+                        style="margin-bottom: 20px; width: 700px; height: 50px; border: none; color:#D63D17;" required>
+                    <option value="Zgjedh kategorinë">Zgjedh kategorinë</option>
+                    <option value="Ushqime">Ushqime</option>
+                    <option value="Pije">Pije</option>
+                    <option value="Higjienë">Higjienë</option>
+                </select>
+            </p>
+            <p><input
                     class="container-fluid" type="text" name="product" placeholder="Emri i produktit"
                     style="margin-bottom: 20px; width: 700px; height: 50px; border: none; color:#D63D17;" required
-                    minlength="4">
+                    minlength="4"></p>
             <p><input
                     class="container-fluid" type="number" name="quantity" placeholder="Sasia" pattern="[0-9]*" min="0"
+                    style="margin-bottom: 20px; width: 700px; height: 50px; border: none; color:#D63D17;"
+                    required>
+            </p>
+            <p><input
+                    class="container-fluid" type="number" name="price" placeholder="Cmimi" min="0" step=0.01
                     style="margin-bottom: 20px; width: 700px; height: 50px; border: none; color:#D63D17;"
                     required>
             </p>
