--- a/templates/dino.html
+++ b/templates/dino.html
@@ -85,6 +85,9 @@ font-size: 17px;
             {% if item.category=="Pije" %}
             <a href="pije#{{item.product}}">{{item.product}}</a>
             {% endif %}
+            {% if item.category=="Higjienë" %}
+            <a href="higjienë#{{item.product}}">{{item.product}}</a>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
