--- a/templates/write.html
+++ b/templates/write.html
@@ -54,6 +54,7 @@
 
             <p><input type="submit" name="submit" value="Shto" style="color: #D63D17;"></p>
         </form>
+        <p><a href="/admin-delete" style="color: black;">Fshi produkt nga databaza?</a></p>
 
     </div>
 </div>
